# HistoArt

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: histogram.py
app/core/: config.py
app/schemas/: histogram.py
app/services/: histogram.py  openrouter.py  renderer.py
app/static/: index.html  site.webmanifest
app/styles/: __init__.py  base.py  elegant_curves.py  minimal.py  neon_glow.py  original.py  tron.py  watercolor.py
docs/: Artistic_RGB_Histogram_API_PRD.docx  Artistic_RGB_Histogram_API_PRD.md
tests/: __init__.py  test_api.py  test_histogram.py
